--- a/package.json
+++ b/package.json
@@ -11,12 +11,13 @@
   "dependencies": {
     "@ignite-ui/react": "^2.2.4",
     "next": "14.1.4",
+    "phosphor-react": "^1.4.1",
     "react": "^18",
     "react-dom": "^18"
   },
   "devDependencies": {
     "@types/node": "^20",
-    "@types/react": "^18",
+    "@types/react": "18.2.19",
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "14.1.4",
